--- a/client/app/scripts/group/views/group.html
+++ b/client/app/scripts/group/views/group.html
@@ -1,5 +1,5 @@
 <h3>Group</h3>
 <br>
 <div>
-  <br><a href="#/" class="kataFont">Home</a>
+  <br><a href="#/" class="kataFont">Homestack</a>
 </div>
