--- a/client/app/scripts/main/views/dashboard.html
+++ b/client/app/scripts/main/views/dashboard.html
@@ -1,7 +1,1 @@
-<h3>Available Katas:</h3>
-
-<div class="buttonPanel">
-    <div class="button">
-        <a href="#/group" class="linkWithoutDecoration kataFont">Select group</a>
-    </div>
-</div>
+<md-button href="#/group" class="md-raised md-accent">Entrar</md-button>
